--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="indented"><p>For passage and board in coming hither, anno 1664, April 17th, in the ship DeEendracht (Concord), Jan Bergen, Master 1. 36.-</p>
     <p>For his 5 children of 15, 13, 11, 7, and 5 years...126s</p>
     <p>Total...1 pound 162 shillings</p></div>
-    <p>This Hendrick Bartholomeus was Hendrick Meese Vrooman, Meese (Meesen), being the possessive form of Mees, or Meus, a short form of Bartholomeus and indicating that Hendrick was a son of Mees, or Bartholomeus Vrooman. Mr. Van Laer, New York Archivist.</p>
+    <p>This Hendrick Bartholomeus was <a href="#1">Hendrick Meese Vrooman</a>, Meese (Meesen), being the possessive form of Mees, or Meus, a short form of Bartholomeus and indicating that Hendrick was a son of Mees, or Bartholomeus Vrooman. Mr. Van Laer, New York Archivist.</p>
     <p>William J. Hoffman in the April number of the New York Genealogical and Biographical Record, 1936, has given us the following account of Hendrick Meese Vrooman's family found in the church records of Leiden, Netherlands. The name of Hendrick Meese Vrooman's wife was not given, as the mother's name is not found in the baptismal entries.</p>
     <div class="indented"><p><a href="#2">Adam Vrooman</a>, born about 1649. On May 23, 1670, he made the statement that he was at the time about 21 years of age. This also checks with the age given in the passenger list.</p>
     <p>Eve, born about 1651;</p>
@@ -49,7 +49,73 @@
     <div class="indented">
     <p>"Hendrick Meese Vrooman (Froman, Vroman, etc) son of Bartholomeus Vrooman, was born about 1618. Married about 1648. Geertruy Johannis, and lived in Leyden. His wife died and in 1664 he came with his children to Albany".</p>
     </div>
-    
+    <p>At the time of the arrival of Hendrick Meese Vrooman in New Netherlands in 1664 with his five children, there were already two other sons of Bartholomeus Vrooman of Holland residing in the New World, Pieter Meese Vrooman and Jacob Meese Vrooman. Peter Meese Vrooman is mentioned as one of the early inhabitants of Beverwijck (Albany) in 1655. He was a master carpenter, surveyor and a millwright. He was the owner of considerable property in Beverwijck (or Fort 01·ange) and a person of some importance. In 1669 he was appointed magistrate of the colony of Rensslaerwijck which office he held until 1671. He was married twice. By his first wife, name unknown, he had a son, Mattys Pietersz Vrooman, who married Maria Arnoutse Viele. In the will of Matthys Pietersz and his wife Marya Vrooman dated April 4, 1684, the only child spoken of was a daughter Geertrude. After the death of Matthys, Maria Arnoutse Viele Vrooman married Douwe Aukes, Feb. 4, 1685, by whom she had one child, Margaret. In the massacre of Schenectady, 1690 both children and their mother, Maria Viele Aukes, were killed.</p>
+    <p>The second son of Bartholomeus Vrooman, Jacob Meese Vrooman, married Elizabeth Lendt or Vanderlinde, the widow of Tuenis Cornelise Swart, about 1685. Jacob was a carpenter and surveyor of Beverwijck (Albany). In his will he spoke of no children but his wife who was to occupy the house by the bridge "formerly Domine Schaets". He died in 1691, After his death his widow married Wouter Uythoff of Albany.</p>
+    <p>The first two brothers, sons of Bartholomeus Vrooman residing in the new world, left no descendants, and the Vrooman family in consideration here descended from the third brother Hendrick Meese Vrooman. The five children accompanying Hendrick Meese Vrooman to the New World in 1664 were: </p>
+    <div class="indented">
+    <p><a href="#2">Adam</a>, born Sept. 14, 1649 in Holland.</p>
+    <p><a href="#3">Johannes</a>, baptised at Mare Kerk Leiden, Holland, February 15, 1653.</p>
+    <p>Kathlyntje, baptised at Hooglandsche Kerk, Zuidzijde, Leiden, Holland, Aug. 5, 1657.</p>
+    <p><a href="#4">Bartholomeus</a>, baptised at Pieterskerk, Leiden, Holland, June 4, 1659.</p>
+    <p>Eva Hendrickse Vrooman born about 1651 in Holland who came to the New World with her father, Hendrick Meese Vrooman, in 1664, married Jochum Lambertse Van Volkenburgh and was a mmember of the Albany Dutch Church. She died at Kinderhook in 1706.</p>
+    </div>
+    <p>Early members of the church in Albany 1683-1700;</p>
+    <div class="indented">
+    <p>Pieter Mees Vrooman</p>
+    <p>Folikje Vrooman</p>
+    <p>Jacob Mees Vrooman</p>
+    <p>Lysbeth Vrooman</p>
+    <p>Jachum Lamberts (Van Volkenburgh)</p>
+    <p>Eva Jochum (his wife, dau of__________Vrooman).</p>
+    </div>
 </section>
+<section class="Coat_of_Arms">
+<h4>Coat of Arms</h4>
+<p>The seat of this family was in Holland</p>
+<p>Arms:</p>
+<div class="indented">
+    <p>Per fesse, one, per pale, (a) or chevronny gules, (b) or fretty gules; two, barry of three, purpure; or fretty gules, gules, gules, over all a fesse purpure, charged with a heart inverted and surmounted by a crescent sable.</p>
+</div>
+<p>Crest:</p>
+<div class="indented">
+    <p>Issuant from a mount vert, charged with five bezents, two pine cones sable.</p>
+</div>
+<p>On June 9, 1897 Abraham Giles Brower of Utica, N.Y. wrote a letter to Hon. John W. Vrooman of Herkimer telling him about the Vrooman Coat of Arms that had been handed down to him.</p>
+<p>The letter is as follows:</p>
+<div class="indented">
+    <p>The old arms that I have is painted on wood, being in distemper (not oil) which indicates that it was painted prior to the 13th century and is therefore not younger then 450 years. The quartering is the arms of Lameree branch of the Egmont family.</p>
+    <p>We belong to the branch of Egmont Von Neijenburg which is the same family only the title of count did not descend in that line. We both started with Redbout, a Frisean King, in 725 A.D., and he was a thoroughbred. </p>
+    <p>The crest indicates that the armour worn was made of rawhide and ornamented with plumes. For anterior to introductCon of iron for that use when your ancestors emerged from the swamps of Batavia to fight Caesar they were clad in armour of rawhide and their spears and clubs were more than a match to the Roman swords. At any rate the Romans never conquered them. The pomegranate indicates that the arms were in the Crusades and fought in the holy wars.</p>
+</div>
+<p>Several years later John W. Vrooman wrote the following on the bottom of the letter that Dr. Brower had sent to him.</p>
+<div class="indented">
+    <p>Dr. A. G.Brower died about ten years ago. He was an accomplished gentleman, a traveler, a historian, and given to research. He was proud of his Vrooman ancestry and visited Holland several times. This brief explanation is given to help you consider his letter and also Artist Crider's letter.</p>
+</div>
+</section>
+<section class="Dedication">
+    <div class="indented">
+        <h4>This volume is dedicated to the descendants of our early pioneers who displayed noble traits of character, courage and daring; honesty, thrift and perseverence.</h4>
+    </div>
+</section>
+<main>
+    <h1>The Vrooman Family</h1>
+    <p><div id="1" style="font-variant: small-caps; font-size: 20px;">1. Hendrick Meese Vrooman</div>Born in Holland, son of Bartholomeus Vrooman, came to New Netherlands in 1664 accompanied by his five children. After living "behind Kinderhook" and in Lansingburgh, he moved to Schenectady. About 1677, Pearson states that he purchased 20 morgens of land of the Van Curler Bourwery, a parcel of land commencing a little south of water street and extending south-westerly to or near the sand bluff, embracing the land covered by the canal and railroad tracts, being bounded, on the east by the land belonging to the Veeders. As there were then no public roads across the flats in this direction.</p>
+    <p>Vrooman's land was reached by a lane still in existence (1883) called Vrooman's alley, or lane, extending from Water Street south-westerly', nearly parallel to Rotterdam Street. His village lot on the north side of State Street, extended from Lang Gang (Centre Street) to within 49 feet of Given's Hotel and extending back northerly about 500 feet.</p>
+    <p>In historical documents preserved by the state of New York is a "List of ye people kilcl and destroyed by ye French of Canada and their Indians at Skinnechtady twenty miles to ye Westward of Albany, between Saturday and Sunday ye 9th clay of February, 1686 90" .... and among the names is that of Hend Meese Vrooman and his son <a href="#4">Bartholomeus</a>.</p>
+    <div class="indented">
+    <p>"Hend Meese Vrooman and Bartholomeus Vrooman kild and burnt, Item 2 negroes of Hend Meese ye same death." Hendrick Meese Vrooman's estate was inherited by his two sons, <a href="#2">Adam</a> and <a href="#3">Jan</a>.</p>
+    <p>2. <a href="#2">Adam Vrooman</a>, b in Holland, Sept. 14, 1649, came to America in 1664 with his father Hendrick Meese Vrooman.</p>
+    <p>3. <a href="#3">Jan Vrooman</a>, born in Holland, Feb 17 1653, second son of Hendrick Meese Vrooman.</p>
+    <p>4. <a href="#4">Bartholomeus Vrooman</a>, born in Holland, June 4, 1659, the child aged five who accompanied his father to the New World in 1664.</p>
+    </div>
+    <p><div id="2" style="font-variant: small-caps; font-size: 20px;">2. Adam Vrooman</div> (<a href="#1">Hendrick Meese Vrooman</a>) b Sept. 14, 1649 in Holland and at the age of 15 came to new Netherland with his father Hendrick Meese Vrooman. In 1670, with the consent of his father, he bound himself for two years to Cornelis Vanden Bergh of Albany County to learn the Millwright's trade. For the first year he was to receive 80 guilders of silver and a pair of new shoes, and for the second year 120 guilders of silver.</a></p>
+
+
+
+
+
+
+    
+</main>
 </body>
 </html>
